--- a/ecommerce.html
+++ b/ecommerce.html
@@ -6,10 +6,10 @@
     <style>
         body {
 
-
+            padding: 20px;
             font-family: Arial, sans-serif;
             margin: 0;
-            padding: 0;
+            /* padding: 0; */
 
 
         }
@@ -92,6 +92,15 @@
             height: 175px;
             width: 225px;
         }
+
+        @media screen and(max-width:670px) {
+            header{
+                max-width: fit-content;
+                margin: 0;
+                padding: 0;
+            }
+        }
+
     </style>
 </head>
 
